game.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: game
  name: game
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-deployment
  namespace: game
  labels:
    app: game
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game
  template:
    metadata:
      labels:
        app: game
    spec:
      containers:
      - image: alexwhen/docker-2048
        imagePullPolicy: Always
        name: game
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: game-svc
  namespace: game
spec:
  selector:
    app: game
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30013
  type: NodePort
