ingress-traefik.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: ingress-test
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - y9pp9.top
    secretName: y9pp9-tls
  rules:
  - host: a.y9pp9.top
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-svc
          servicePort: 80
  - host: b.y9pp9.top
    http:
      paths:
      - path: /
        backend:
          serviceName: apache-svc
          servicePort: 80
